# spartan-type-theory

./: .dir-locals.el  .gitignore  .merlin  LICENSE.md  Makefile  README.md  _tags  dune-project  spartan-type-theory.opam  spartan.odocl  spartan.opam
examples/: funext.stt  funext.tt  numerals.stt  numerals.tt
lib/core/: TT.ml  TT.mli  context.ml  context.mli  dune  equal.ml  equal.mli  norm.ml  norm.mli  print.ml  print.mli  toplevel.ml  toplevel.mli  typecheck.ml  typecheck.mli
lib/desugared/: desugar.ml  desugar.mli  dune  syntax.ml
lib/parsing/: dune  lexer.ml  parser.mly  syntax.ml  syntax.mli  ulexbuf.ml  ulexbuf.mli
lib/util/: config.ml  dune  level.ml  level.mli  location.ml  location.mli  name.ml  name.mli  print.ml
src/: TT.ml  TT.mli  build.ml  clerical.ml  config.ml  config.mli  context.ml  context.mli  desugar.ml  desugar.mli  dune  dyadic.ml  equal.ml  error.ml  eval.ml  external.ml  input.ml  input.mli  level.ml  level.mli  lexer.ml  location.ml  name.ml  name.mli  parser.mly  print.ml  print.mli  real.ml  runtime.ml  spartan.ml  syntax.ml  test_rounding.ml  toplevel.ml  toplevel.mli  type.ml  typecheck.ml  typecheck.mli  ulexbuf.ml  ulexbuf.mli  value.ml
test/: dune
test/syntax.t/: run.t  syntax.stt
