opam-version: "2.0"
name: "spartan"
version: "2.0"
synopsis: "minimalistic implementation of dependent type theory"
description: """
This project shows how to implement a minimalist type theory that is sometimes
called "spartan type theory".
The first version was presented at the School and Workshop on Univalent Mathematics which took place at the University of Birmingham in December 2017.
The second version was presented at the Hausdorf Research Institute for Mathematics, the Prospects of Formal Mathematics trimester program.
"""
maintainer: "Andrej Bauer <andrej.bauer@andrej.com>"
authors: "Andrej Bauer <andrej.bauer>"
license: "MIT License"
homepage: "https://github.com/andrejbauer/spartan-type-theory"
bug-reports: ""
dev-repo: "https://github.com/andrejbauer/spartan-type-theory"
depends: [ "ocaml" "dune" "menhir" "menhirLib" "sedlex"]
build: [
  [dune]
]
install: [dune install]
